# wks

./: .CCUNO  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  2025-WKS.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.ci-runner  Dockerfile.test-linux-service  FEEDBACK.md  FOR_BOTS.md  HANDOFF_URI_REFACTOR.md  NEXT.md  ORGANIZATION_CONTEXT.md  README.md  REFACTOR_URI_PLAN.md  ROADMAP.md  ROBUSTNESS_SUMMARY.md  SPEC.md  TASKS.md  TODO.md  WKSO_TEST_FILE.txt  WKS_MIGRATION.md  coverage.json  defs.json  heracles-config.json  package-lock.json  pyproject.toml  pytest.ini  repomix-linux-service.json  repomix-linux-service.txt  repomix-output.xml  setup.cfg  setup.py  stats.json  (+3 more)
.cursor/rules/: .gitignore  important.mdc
.github/workflows/: check-image-freshness.yml  lint-pr.yml  publish-ci-image.yml  publish-test-image.yml  quality.yml  test-linux-service.yml  test.yml  update-stats.yml
_requests/: r01.sh  r01_bootstrap.sh  r02_dump_md.sh  r02_set_tokenizers_env.sh  r03_index_any.sh
docker/: Dockerfile.ci-runner  README.md
docs/: AGENT1_INSTRUCTIONS.md  AGENT2_INSTRUCTIONS.md  AGENT2_REBASE_INSTRUCTIONS.md  AGENT2_REVIEW.md  AGENT3_INSTRUCTIONS.md  CAMPAIGN_REVIEW.md  CI_FIXES.md  CI_TROUBLESHOOTING.md  LESSONS_LEARNED.md  MERGE_POLICY.md  PR_REVIEW_2.md  README.md  Review1.md  TEST_REFACTOR_CAMPAIGN.md  __init__.py
docs/campaigns/: NEXT.md  README.md
docs/investigations/: mutation-oom-issue.md
docs/other/: LESSONS_LEARNED.md
docs/patterns/: README.md  directory-structures.md  naming-conventions.md  obsidian-linking.md  obsidian-vault.md  overview.md  (+1 more)
guides/: CLAUDE.md  links-design.md  patterns-design.md  related-design.md
qa/: __init__.py  traceability_audit.html
scripts/: README.md  _run_pytest_suite.py  aggregate_mutation_stats.py  check_complexity.py  check_docker_image.sh  check_format.py  check_quality.py  check_types.py  check_version_sync.py  ci_cleanup_disk.sh  debug_memory_monitor.sh  deploy_wks0.sh  deploy_wkso.sh  diagnose_transform_memory.py  disk_avail.sh  docker_shell.sh  file-monitor-daemon.py  file-monitor.py  fix_broken_file_urls.py  fix_file_urls.py  fix_file_urls_v2.py  generate_all_stats.py  generate_ci_stats.py  generate_codebase_visualization.py  generate_coverage_stats.py  generate_loc_stats.py  generate_token_stats.py  migrate_v1_to_v2.py  migrate_wkso.py  run_coverage.sh  run_pytest_pre_push.sh  sort-from-inbox.py  stats_lib.py  test_integration.py  test_mutation_api.py  test_smoke.py  test_unit.py  update_readme_stats.py  update_traceability_audit.py
tests/: README.md  conftest.py  test_cli_basic.py  test_cli_commands.py  test_cli_db.py  test_cli_db_info.py  test_cli_helpers.py  test_cli_main.py  test_cli_related.py  test_cli_service.py  test_config_decentralized.py  test_config_validator.py  test_daemon_events.py  test_daemon_health.py  test_daemon_lifecycle.py  test_daemon_maintenance.py  test_db_helpers.py  test_dbmeta.py  test_diff.py  test_diff_config.py  test_display_cli.py  test_display_formats.py  test_display_mcp.py  test_error_messages.py  test_extractor.py  test_file_url_conversion.py  test_git_hooks.py  test_git_integration.py  test_git_vault_watcher.py  test_mcp_bridge.py  test_mcp_server.py  test_mcp_setup.py  test_mongo_retry.py  test_mongoctl.py  test_monitor.py  test_monitor_controller.py  test_monitor_design_regressions.py  test_monitor_operations.py  test_monitor_vault_integration.py  test_obsidian_vault_operations.py  (+25 more)
wks/: README.md  __init__.py  __main__.py  activity.py  cli.py  cli.py.backup  cli_config.py  cli_db.py  config.py  config_schema.py  config_validator.py  constants.py  daemon.py  db_helpers.py  dbmeta.py  error_messages.py  extractor.py  filesystem_monitor.py  links.py  logging_config.py  mcp_bridge.py  mcp_client.py  mcp_paths.py  mcp_server.py  mcp_setup.py  mongo_retry.py  mongoctl.py  monitor.py  monitor_controller.py  monitor_rules.py  obsidian.py  priority.py  service_controller.py  similarity.py  status.py  templating.py  uri_utils.py  utils.py
wks_move_test/: evt_1760976813.txt
(+1032 files in other folders)
