[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"docs.specifications" = ["*.json"]

[project.scripts]
wksc = "wks.cli:main"

[project]
name = "wks"
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
    "watchdog",
    "rich",
    "typer[all]",
    "pydantic>=2.0",
    "pymongo",
    "sentence-transformers",
    "docling",
    "bsdiff4",
    "mongomock",
    "jinja2",
    "pyyaml",
    "pytest>=7.0",
    "pytest-timeout>=2.1",
    "pytest-xdist>=3.0",
    "pre-commit",
    "ruff",
    "mypy",
    "lizard",
    "types-requests",
    "types-PyYAML",
    "types-setuptools",
    "typer",
    "pydantic",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "N", "UP", "C4", "SIM", "ARG", "PTH", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
check_untyped_defs = true  # Enable this first
