[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"docs.specifications" = ["*.json"]

[project.scripts]
wksc = "wks.cli:main"

[project]
name = "wks"
version = "0.4.0"
requires-python = ">=3.10"
dependencies = [
    "watchdog",
    "rich",
    "typer[all]",
    "pydantic>=2.0",
    "pymongo",
    "sentence-transformers",
    "docling",
    "bsdiff4",
    "mongomock",
    "jinja2",
    "mutmut>=3.4.0",
    "pyyaml",
    "pytest>=7.0",
    "pytest-timeout>=2.1",
    "pytest-xdist>=3.0",
    "pre-commit",
    "ruff",
    "mypy",
    "lizard",
    "types-requests",
    "types-PyYAML",
    "types-setuptools",
    "typer",
    "pydantic",
    "tabulate",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "N", "UP", "C4", "SIM", "ARG", "PTH", "RUF"]
ignore = [
    "N999", # file/module names in this repo are not uniformly snake_case
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # pytest fixtures and test doubles commonly need unused params
    "N999", # tests in this repo use mixed-case module naming
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
check_untyped_defs = true  # Enable this first
